commit Dockerfile set branch development

--- a/docker-compose_v1.yml
+++ b/docker-compose_v1.yml
@@ -3,10 +3,13 @@ web_service:
   dockerfile: Dockerfile
   command: bundle exec rails s -p 3000 -b '0.0.0.0'
   hostname: api-a
+  stdin_open: true
   container_name: web_service
   tty: true
   ports:
     - "3000:3000"
+  volumes:
+    - ${PWD}:/web_service
   env_file:
     - ./docker-env/production.env
 
@@ -15,10 +18,12 @@ api_a:
   dockerfile: Dockerfile
   command: bundle exec rails s -p 3001 -b '0.0.0.0'
   hostname: api-a
-  container_name: api_a
+  stdin_open: true
   tty: true
   ports:
     - "3001:3001"
+  volumes:
+    - ${PWD}:/api_a
   env_file:
     - ./docker-env/production.env
 
@@ -27,10 +32,12 @@ api_b:
   dockerfile: Dockerfile
   command: bundle exec rails s -p 3002 -b '0.0.0.0'
   hostname: api-b
-  container_name: api_b
+  stdin_open: true
   tty: true
   ports:
     - "3002:3002"
+  volumes:
+    - ${PWD}:/api_b
   env_file:
     - ./docker-env/production.env
 
@@ -39,9 +46,11 @@ api_products:
   dockerfile: Dockerfile
   command: bundle exec rails s -p 3003 -b '0.0.0.0'
   hostname: api-products
-  container_name: api_products
+  stdin_open: true
   tty: true
   ports:
     - "3003:3003"
+  volumes:
+    - ${PWD}:/api_products
   env_file:
     - ./docker-env/production.env
